--- a/test.css
+++ b/test.css
@@ -179,6 +179,9 @@ header .logo {
     z-index: 3;
 }
 
+
+/* start of side bar styling yayayayayay */
+
 .menu {
     position: absolute;
     top: 0;
@@ -187,71 +190,74 @@ header .logo {
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
+    background: #292b2c;
+    color: #f7f7f7ff;
+    transition: all 0.3s;
 }
 
 .menu ul {
     position: relative;
+    width: 300px;
 }
 
 .menu ul li {
     list-style: none;
 }
 
+.menu.active {
+    margin-right: -300px;
+}
+
+.menu.sidebar-header {
+    padding: 20px;
+    background: #4e5254;
+}
+
+.menu ul p {
+    color: #f7f7f7ff;
+    padding: 10px;
+}
+
 .menu ul li a {
     text-decoration: none;
-    padding: 3px;
+    padding: 10px;
     font-size: 24px;
-    color: #f7f7f7;
+    color: #f7f7f7ff;
+    display: block;
 }
 
 .menu ul li a:hover {
-    color: #f7f7;
+    color: #292b2c !important;
+    background: #f7f7f7ff!important;
 }
 
-.dropdown {
-    transition: 0.2s ease-in-out;
+.menu ul li.active>a,
+a[aria-expanded="true"] {
+    color: #f7f7f7ff;
+    background: #4e5254;
 }
 
-.dropdown-content {
-    display: none;
+a[data-toggle="collapse"] {
     position: relative;
-    right: 0px;
 }
 
-.dropdown-content ul li {
-    list-style: none;
-}
-
-.dropdown-content ul li a {
-    text-decoration: none;
-    font-size: 20px;
-    color: #f7f7f7;
-    margin-left: 20%;
-}
-
-.dropdown-link {
-    list-style: none;
-    font-size: 12px;
-    color: #f7f7f7;
-}
-
-.dropdown-link:hover {
-    color: #f7f7;
-}
-
-.dropdown:hover {
-    cursor: pointer;
-}
-
-.dropdown:hover .dropdown-btn {
-    color: #f7f7f7;
-    text-decoration: underline;
-}
-
-.dropdown:hover .dropdown-content {
+.dropdown-toggle::after {
     display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
 }
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #4e5254
+}
+
+
+/* end of side menu */
 
 .footmenu {
     margin-top: 5%;
