--- a/index.css
+++ b/index.css
@@ -11,9 +11,13 @@ body {
   background: #292b2c;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 header
 {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -48,7 +52,7 @@ header .logo
   background-position: center;
   cursor: pointer;
 }
-.mainpage
+.showcase
 {
   position: relative;
   right: 0;
@@ -62,12 +66,11 @@ header .logo
   transition: 0.5s;
   z-index: 2;
 }
-.mainpage.active
+.showcase.active
 {
   right: 300px;
 }
-
-.mainpage video
+.showcase video
 {
   position: absolute;
   top: 0;
@@ -76,6 +79,10 @@ header .logo
   height: 100%;
   object-fit: cover;
   opacity: 0.8;
+}
+.mainpage.active 
+{
+  right: 300px;
 }
 .overlay
 {
@@ -177,6 +184,12 @@ header .logo
   margin-top: 40px;
   z-index: 3;
 }
+/* Navigation Related Styling */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .menu
 {
   position: absolute;
@@ -207,30 +220,31 @@ header .logo
 {
   color: #f7f7; 
 }
+
 .dropdown {
   transition: 0.2s ease-in-out;
+  transition-delay: 1s;
 }
 .dropdown-content {
-  display: none;
+  display: block;
   position: relative;
+  max-height: 0px;
   right: 0px;
+
+  visibility:  hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear, max-height 0.3s ease;
+  transition-delay: 1s;
 }
-.dropdown-content ul li {
-  list-style: none;
-}
-.dropdown-content ul li a {
+.dropdown-content .dropdown-item{
   text-decoration: none;
-  font-size: 20px;
-  color: #f7f7f7;
-  margin-left: 20%;
-}
-.dropdown-link {
   list-style: none;
-  font-size: 12px;
-  color:  #f7f7f7;
+  font-size: 16px;
+  color: #f7f7f7;
+  margin-left: 5%;
 }
-.dropdown-link:hover {
-  color:  #f7f7;
+.dropdown-content .dropdown-item:hover{
+  color: #292b2c;
 }
 .dropdown:hover {
   cursor:  pointer;
@@ -241,14 +255,21 @@ header .logo
 }
 .dropdown:hover .dropdown-content {
   display: block;
+  max-height: 200px;
+  visibility: visible;
+  opacity:  1;
+  transition: all 0.3s ease;
+  transition-delay: 1s;
 }
 
-
+/* Footer */
 .footmenu {
   margin-top: 5%;
   background: #292b2c;
 }
 
+
+/* Mobile Text */
 @media (max-width: 991px)
 {
   .showcase,
