--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html {
 
 header
 {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -34,7 +34,9 @@ header .logo
 }
 .toggle
 {
-  position: relative;
+  position: fixed;
+  top: 43px;
+  right: 5%;
   width: 60px;
   height: 60px;
   background: url(https://i.ibb.co/HrfVRcx/menu.png);
@@ -42,6 +44,8 @@ header .logo
   background-size: 30px;
   background-position: center;
   cursor: pointer;
+
+  z-index: 1000;
 }
 .toggle.active
 {
@@ -143,9 +147,8 @@ header .logo
 }
 .social
 {
-  position: absolute;
+  position: relative;
   z-index: 10;
-  bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -231,11 +234,10 @@ header .logo
 }*/
 
 .wiki-content {
-    display: flex;
     position: relative;
-    padding: 5%;
+    padding: 4%;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 20px;
     z-index: 3;
 }
 /* Navigation Related Styling */
@@ -326,6 +328,28 @@ header .logo
   background: #292b2c;
 }
 
+/* Cards */
+.card {
+    max-height: 600px;
+    outline: 2px solid;
+    border-radius: 0%;
+    transition-duration: 0.3s;
+}
+
+.card:hover {
+    box-shadow: -10px 10px black;
+    transition: 0.3s all ease-in-out;
+    margin-top: -10px;
+    margin-left: 3px;
+}
+.card:hover .side-one {
+    transition: 1s ease-in-out;
+}
+
+#logo {
+  width:  70px;
+  height:  70px;
+}
 
 /* Mobile Text */
 @media (max-width: 991px)
@@ -342,5 +366,12 @@ header .logo
   .text h3
   {
     font-size: 2em;
+  }
+}
+
+@media (max-width: 576px)
+{
+  .toggle {
+    border-radius: 50%;
   }
 }
