--- a/templates/cards_template/cards.html
+++ b/templates/cards_template/cards.html
@@ -62,6 +62,16 @@
             </div>
         </div> -->
 
+
+        <!-- Card Template -->
+        <!-- <div class="card">
+                <img src="img1.jpg" class="card-img-top" alt="">
+                <div class="card-body text-center mt-4">
+                    <h4 class="card-title">NAME2</h4>
+                    <p class="card-text">ahhahahah</p>
+                </div>
+        </div> -->
+
         <div class="col-xs-12 col-sm-6 col-md-4 my-4">
             <div class="card">
                 <img src="img1.jpg" class="card-img-top" alt="">
